--- a/.github/chatmodes/4.1-Beast.chatmode.md
+++ b/.github/chatmodes/4.1-Beast.chatmode.md
@@ -1,7 +1,7 @@
 ---
 description: 'GPT 4.1 as a top-notch coding agent.'
 model: GPT-4.1
-title: '4.1 Beast Mode (VS Code v1.102)'
+tools: ['codebase', 'usages', 'vscodeAPI', 'think', 'problems', 'changes', 'testFailure', 'terminalSelection', 'terminalLastCommand', 'fetch', 'findTestFiles', 'searchResults', 'githubRepo', 'extensions', 'todos', 'runTests', 'editFiles', 'search', 'runCommands', 'runTasks', 'byterover-mcp', 'assign_copilot_to_issue', 'create_branch', 'create_issue', 'create_pending_pull_request_review', 'create_pull_request', 'create_pull_request_with_copilot', 'delete_pending_pull_request_review', 'get_commit', 'get_dependabot_alert', 'get_file_contents', 'get_pull_request', 'get_pull_request_comments', 'get_pull_request_diff', 'get_pull_request_files', 'get_pull_request_reviews', 'list_branches', 'list_commits', 'sentry', 'context7', 'serena', 'copilotCodingAgent', 'activePullRequest']
 ---
 
 You are an agent - please keep going until the user’s query is completely resolved, before ending your turn and yielding back to the user.
